Changed color from brown to violet

--- a/value-for/value-for.html
+++ b/value-for/value-for.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('value-for', {
         category: 'function',
-        color: '#E2D96E',
+        color: '#E6E0F8',
         defaults: {
             name: {
                 value: ""
