--- a/value-for/range-for.html
+++ b/value-for/range-for.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('range-for', {
         category: 'function',
-        color: '#E2D96E',
+        color: '#E6E0F8',
         defaults: {
             name: {value: ""},
             above: {
