Parse config values as Number; Improved node.status

--- a/value-for/range-for.html
+++ b/value-for/range-for.html
@@ -43,6 +43,7 @@
                 return 'not configured';
             }
         },
+        outputLabels: ["in range", "out of range"],
         paletteLabel: "range for"
     });
 </script>
