--- a/value-for/value-for.html
+++ b/value-for/value-for.html
@@ -38,6 +38,7 @@
                 return 'value for ' + this.for + this.units;
             }
         },
+        outputLabels: ["matched", "not mached"],
         paletteLabel: "value for"
     });
 </script>
