--- a/value-for/value-for.html
+++ b/value-for/value-for.html
@@ -76,7 +76,9 @@
     <div class="form-row">
         <input type="checkbox" id="node-input-keepfirstmsg" style="display: inline-block; width: auto; vertical-align: top;">
         <label style="width: auto;" for="node-input-keepfirstmsg">Keep first message.</label></input>
-        <span style="font-style: italic;">By default, the latest input message will be forwarded to the output. Select this checkbox to forward the very first message that matched the "value" instead.</span>
+        <div class="form-tips">
+            <span style="font-style: italic;">By default, the latest input message will be forwarded to the output. Select this checkbox to forward the very first message that matched the "value" instead.</span>
+        </div>
     </div>
 </script>
 
